# draw_cad

./: .gitignore  Makefile  PLAN.md  README.md  agent_loop.py  best2_conversation.md  best_conversation.md  better2_conversation.md  better_conversation.md  good2_conversation.md  good_conversation.md  main.py  new_conversation.md  new_involute_cam.scad  original_conversation.md  pyproject.toml  web_ui.py
benchmarks/: suite.yaml
config/: ai_toolbox_manifest.yaml  default.yaml  gemma4_total_view.yaml  models.yaml  optimizer.yaml  total_view_data.yaml
gemma4_agent/: PLAN.md  README.md  RESEARCH.md  __init__.py  agent.py  cli.py  config.yaml  extractors.py  pi_loop.py  toolbox.py  training.py
prompts/: gemma4_gdt_callout_teacher.md  reconciliation_prompt.md  retry_prompt.md  system_prompt.md  validation_prompt.md  vision_prompt.md
scripts/: benchmark_total_view_data.py  collect_grabcad_gdt_drawings.mjs  compile_external_gdt_training_set.py  create_benchmark_entry.py  evaluate_gdt_mask_grounding.py  export_ai_toolbox.py  export_gdt_teacher_dataset.py  extract_grabcad_drawing_candidates.py  install_environment.sh  preprocess_training_data.py  reconstruct_total_view_data.py  run_agent_architecture_experiments.py  run_benchmark.py  run_gdt_harness.py  run_gdt_symbol_vision_harness.py  run_gdt_vision_model_harness.py  run_gemma4_callout_agent.py  run_gemma4_gdt_experiments.py  run_gemma4_gdt_roundtrips.py  run_gemma4_total_view_experiment.py  run_optimizer.py  run_pipeline.py  run_titleblock_harness.py  run_training_orthographic_case_study.py  run_vector_harness.py  split_external_gdt_view_types.py  tune_gemma4_gdt_roundtrip.py  validate_install.py
src/: ai_toolbox.py
test_result/: README.md  index.html  summary.json
tests/: test_ai_toolbox.py  test_drawing_roundtrip.py  test_evaluation.py  test_gemma4_agent.py  test_gemma4_total_view.py  test_inference.py  test_optimizer.py  test_pipeline.py  test_title_block_segmentation.py  test_total_view_reconstruction.py  test_training.py  test_training_svg_reconstruction.py  test_vectorization_harness.py  (+2 more)
(+3175 files in other folders)
